--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,16 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Gabriel's Portfolio"
+      name="S0ftPortfolio"
       content="Portfolio content"
     />
-    <meta property="og:title" content="Gabriel Affonso Azevedo Portfolio" />
+    <meta property="og:title" content="Gabriel Azevedo Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ashutosh1919.github.io/" />
-    <meta name="description" content="Gabriel's Personal Portfolio Website" property="og:description">
+    <meta property="og:url" content="https://gabr1el0x.github.io/" />
+    <meta name="description" content="S0ftPortfolio" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
-    <meta name="keywords" content="Gabriel, Portfolio, Gabriel's Portfolio" />
-    <meta name="author" content="h3yb1el" />
+    <meta name="keywords" content="Gabriel, Portfolio, S0ftPortfolio" />
+    <meta name="author" content="gabr1el0x" />
     <meta name="application-name" content="Gabriel's Portfolio" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
@@ -77,7 +77,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Gabriel's Portfolio</title>
+    <title>S0ftPortfolio</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
