--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,17 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="S0ftPortfolio"
+      name="💻 S0ftPortfolio"
       content="Portfolio content"
     />
-    <meta property="og:title" content="Gabriel Azevedo Portfolio" />
+    <meta property="og:title" content="💼 Gabriel Azevedo Portfólio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gabr1el0x.github.io/" />
-    <meta name="description" content="S0ftPortfolio" property="og:description">
+    <meta name="description" content="</> Um profissional dedicado, movido pela paixão, sempre buscando oportunidades para contribuir no desenvolvimento de produtos abrangentes. Com expertise na criação de sistemas sociais, técnicos, sustentáveis e escaláveis, buscando constantemente gerar um impacto extraordinário." property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
-    <meta name="keywords" content="Gabriel, Portfolio, S0ftPortfolio" />
+    <meta name="keywords" content="Design, Portfolio, Tecnology, Software" />
     <meta name="author" content="gabr1el0x" />
-    <meta name="application-name" content="Gabriel's Portfolio" />
+    <meta name="application-name" content="S0ftPortfolio" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
