--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="💼 Gabriel Azevedo Portfólio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gabr1el0x.github.io/" />
-    <meta name="description" content="</> Um profissional dedicado, movido pela paixão, sempre buscando oportunidades para contribuir no desenvolvimento de produtos abrangentes. Com expertise na criação de sistemas sociais, técnicos, sustentáveis e escaláveis, buscando constantemente gerar um impacto extraordinário." property="og:description">
+    <meta name="description" content="</> Um profissional dedicado, movido pela paixão sempre buscando oportunidades para contribuir no desenvolvimento de produtos abrangentes. Com expertise na criação de sistemas sociais, técnicos, sustentáveis e escaláveis, buscando constantemente gerar um impacto extraordinário." property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
     <meta name="keywords" content="Design, Portfolio, Tecnology, Software" />
     <meta name="author" content="gabr1el0x" />
